feat(sourcebot): add github integration options to runtipi ui

--- a/apps/sourcebot/docker-compose.yml
+++ b/apps/sourcebot/docker-compose.yml
@@ -18,6 +18,9 @@ services:
       - REDIS_URL=redis://sourcebot-redis:6379
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - GITHUB_APP_ID=${GITHUB_APP_ID}
+      - GITHUB_APP_PRIVATE_KEY=${GITHUB_APP_PRIVATE_KEY}
     depends_on:
       sourcebot-postgres:
         condition: service_healthy
