--- a/apps/sourcebot/docker-compose.yml
+++ b/apps/sourcebot/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       - -c
       - >-
         if [ ! -f /data/config.json ]; then printf '%s
-        ' '{"$schema":"https://raw.githubusercontent.com/sourcebot-dev/sourcebot/main/schemas/v3/index.json","connections":{"starter-connection":{"type":"github","repos":["sourcebot-dev/sourcebot"]}}}' > /data/config.json; fi && chown -R 1500:1500 /data
+        ' '{"$schema":"https://raw.githubusercontent.com/sourcebot-dev/sourcebot/main/schemas/v3/index.json","connections":{"starter-connection":{"type":"github","repos":["9kit-com/swemk"]}}}' > /data/config.json; fi && chown -R 1500:1500 /data
     volumes:
       - ${APP_DATA_DIR}/data/app:/data
     restart: "no"
