--- a/apps/sourcebot/docker-compose.yml
+++ b/apps/sourcebot/docker-compose.yml
@@ -70,8 +70,17 @@ services:
       - sh
       - -c
       - >-
-        if [ ! -f /data/config.json ]; then printf '%s
-        ' '{"$schema":"https://raw.githubusercontent.com/sourcebot-dev/sourcebot/main/schemas/v3/index.json","connections":{"starter-connection":{"type":"github","repos":["9kit-com/swemk"]}}}' > /data/config.json; fi && chown -R 1500:1500 /data
+        if [ ! -f /data/config.json ]; then
+          JSON='{"$schema":"https://raw.githubusercontent.com/sourcebot-dev/sourcebot/main/schemas/v3/index.json","connections":{"starter-connection":{"type":"github","repos":["9kit-com/swemk"]';
+          [ -n "$GITHUB_TOKEN" ] && JSON="$JSON"',''"token":{"env":"GITHUB_TOKEN"}';
+          JSON="$JSON"'}}}';
+          [ -n "$GITHUB_APP_ID" ] && [ -n "$GITHUB_APP_PRIVATE_KEY" ] && JSON="${JSON%?}"', "apps": [{"type": "github", "id": "'"$GITHUB_APP_ID"'", "privateKey": {"env": "GITHUB_APP_PRIVATE_KEY"}}]}';
+          echo "$JSON" > /data/config.json;
+        fi && chown -R 1500:1500 /data
+    environment:
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - GITHUB_APP_ID=${GITHUB_APP_ID}
+      - GITHUB_APP_PRIVATE_KEY=${GITHUB_APP_PRIVATE_KEY}
     volumes:
       - ${APP_DATA_DIR}/data/app:/data
     restart: "no"
