--- a/apps/sourcebot/docker-compose.yml
+++ b/apps/sourcebot/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       sourcebot-postgres:
         condition: service_healthy
       sourcebot-redis:
-        condition: service_healthy
+        condition: service_started
       sourcebot-init:
         condition: service_completed_successfully
     healthcheck:
@@ -57,11 +57,6 @@ services:
     restart: unless-stopped
     volumes:
       - ${APP_DATA_DIR}/data/redis:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 3s
-      timeout: 10s
-      retries: 10
 
   sourcebot-init:
     image: alpine:3.19
