--- a/apps/sourcebot/docker-compose.yml
+++ b/apps/sourcebot/docker-compose.yml
@@ -29,11 +29,11 @@ services:
       sourcebot-init:
         condition: service_completed_successfully
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3000"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 
   sourcebot-postgres:
     image: postgres:16-alpine
